--- a/css/styles.css
+++ b/css/styles.css
@@ -1,89 +1,69 @@
 body {
-    font-family: Rubik, sans-serif;
+    font-family: 'Segoe UI', sans-serif;
     margin: 0;
     padding: 0;
-}
-
-nav {
-    width: 100%;
-    background-color: #333;
-    color: #fff;
-    padding: 1em;
-    margin: auto;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    background-color: #f7f7fa;
+    color: #333;
+    text-align: center;
+  }
+  
+  nav {
+    background-color: #6a5acd;
+    color: white;
+    padding: 1rem;
+    font-size: 1.5rem;
+  }
+  
+  .intro {
     display: flex;
-    justify-content: space-around;
-}
-
-nav ul li {
-    display: inline;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 0.5em 1em;
-    position: relative;
-}
-
-nav ul li a:hover {
-    color: #bb7fe5;
-    text-transform: uppercase;
-    
-}
-
-nav ul li a::after{
-    content:'';
-    height: 3px;
-    width: 0;
-    background: #c988f8;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    transition: 0.5s;
-}
-
-nav ul li a:hover::after{
-    width: 100%;
-
-}
-
-.content {
-    padding: 2em;
-}
-
-#home {
-    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    flex-direction: row;
-}
-
-.home-content {
-    display: flex;
-}
-
-.image img {
-    max-width: 200px;
-    height: auto;
-    margin-right: 2em;
-}
-
-.info {
+    padding: 2rem;
+  }
+  
+  .intro img {
+    width: 180px;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+    border: 4px solid #6a5acd;
+  }
+  
+  .bio {
     max-width: 600px;
-}
-
-.content h1 {
-    font-size: 2em;
-    margin-bottom: 0.5em;
-    color:#bb7fe5
-}
-
-.content p {
-    font-size: 1.2em;
-}
+  }
+  
+  .interests {
+    padding: 2rem;
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  ul li {
+    font-size: 1.2rem;
+    padding: 0.3rem;
+  }
+  
+  button {
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    background-color: #6a5acd;
+    color: white;
+    border: none;
+    cursor: pointer;
+    margin-top: 1rem;
+    border-radius: 5px;
+  }
+  
+  button:hover {
+    background-color: #5b4bb2;
+  }
+  
+  footer {
+    background-color: #eee;
+    padding: 1rem;
+    margin-top: 2rem;
+  }
+  
